--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# OpenAI Configuration
+
 # Get your API key from: https://platform.openai.com/api-keys
 # Then uncomment and add your key below:
-# VITE_OPENAI_API_KEY=your_openai_api_key_here
+VITE_OPENAI_API_KEY=AIzaSyBWu4WRfw5IV-CI8f-7DSz7rOBkSPKlLkI
 
 # Note: Never commit API keys to version control!
 # Use this file for local development only.
