--- a/.github/workflows/datadog-synthetics.yml
+++ b/.github/workflows/datadog-synthetics.yml
@@ -31,8 +31,8 @@ jobs:
     - name: Run Datadog Synthetic tests
       uses: DataDog/synthetics-ci-github-action@87b505388a22005bb8013481e3f73a367b9a53eb # v1.4.0
       with:
-        api_key: ${{secrets.DD_API_KEY}}
-        app_key: ${{secrets.DD_APP_KEY}}
+        api_key: ${{ secrets.DD_API_KEY }} # Make sure DD_API_KEY is set in your repository secrets at https://github.com/<owner>/<repo>/settings/secrets/actions
+        app_key: ${{ secrets.DD_APP_KEY }} # Ensure DD_APP_KEY is set in your repository secrets at https://github.com/<owner>/<repo>/settings/secrets/actions
         test_search_query: 'tag:e2e-tests' #Modify this tag to suit your tagging strategy
 
 
